--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     repositories {
         jcenter()
     }
-    
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
@@ -16,6 +16,14 @@ apply plugin: 'application'
 group 'com.obolonnyy.owl_ktor'
 version '0.0.1'
 mainClassName = "io.ktor.server.netty.EngineMain"
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.obolonnyy.owl_ktor.ApplicationKt'
+        )
+    }
+}
 
 apply plugin: 'com.github.johnrengelman.shadow'
 
@@ -54,10 +62,16 @@ sourceCompatibility = 1.8
 
 // This task will generate your fat JAR and put it in the ./build/libs/ directory
 shadowJar {
-    archiveFileName = 'owl-ktor.jar'
+    archiveFileName = "owl_ktor-${version}.jar"
+//    archiveFileName = "owl-ktor.jar"
 }
 
 // needs for Heroku
-task stage {
-    dependsOn installDist
+task stage(type: Copy, dependsOn: [shadowJar]) {
+    from jar.getArchiveFile()
+    into project.rootDir
+    rename {
+        'app.jar'
+    }
 }
+stage.mustRunAfter(clean)
