--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     }
 }
 
+apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
@@ -49,8 +50,14 @@ dependencies {
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+sourceCompatibility = 1.8
 
 // This task will generate your fat JAR and put it in the ./build/libs/ directory
 shadowJar {
     archiveFileName = 'owl-ktor.jar'
+}
+
+// needs for Heroku
+task stage {
+    dependsOn installDist
 }
