--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,12 @@ dependencies {
     implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
     implementation "io.ktor:ktor-client-gson:$ktor_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+
+    implementation "org.jetbrains.exposed:exposed-core:0.18.1"
+    implementation "org.jetbrains.exposed:exposed-dao:0.18.1"
+    implementation "org.jetbrains.exposed:exposed-jdbc:0.18.1"
+    implementation "org.postgresql:postgresql:42.2.4.jre7"
+    implementation "com.zaxxer:HikariCP:3.3.1"
 }
 
 compileKotlin {
